# reindeer

./: Cargo.toml  README.md
.github/workflows/: ci.yml
binaries/elf-viewer/: Cargo.toml
binaries/elf-viewer/src/: main.rs
binaries/reindeer-fuzz-target/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs  main_target.rs
reindeer/: Cargo.toml
reindeer/src/: elf_aux_structures.rs  elf_structures.rs  errors.rs  lib.rs  macros.rs  range.rs
src/: elf_aux_structures.rs  elf_structures.rs  errors.rs  lib.rs  main.rs  range.rs
