[package]
name = "reindeer-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.reindeer]
path = "../reindeer"

[[bin]]
name = "main_target"
path = "fuzz_targets/main_target.rs"
test = false
doc = false
bench = false
